--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -8,9 +8,13 @@
 
 .background {
   padding-bottom: 100px;
-  height: 100%
+  /* height: 100% */
 }
 
 body { 
   padding-top: 70px; 
+}
+
+.h-vh {
+  height: 100vh
 }
